<resources>
    <string name="app_name">AHBottomNavigation</string>
    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="menu_5">Menu 5</string>
    <string name="tab1_custom_colors">Tab1 custom colors</string>
    <string name="tab2_different_colors">Tab2 different colors</string>
    <string name="tab3_selected_icon_color">Tab3 colors</string>
    <string name="fontSize">Font Size</string>
    <string name="tab1_pimple">Tab1 pimple</string>
    <string name="tab2_pimple">Tab2 pimple</string>
    <string name="tab2_badge">Tab2 badge</string>
</resources>
