<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/fragment_demo_switch_colored"
        style="@style/setting"
        android:text="Colored" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/fragment_demo_switch_five_items"
        style="@style/setting"
        android:text="5 items" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/fragment_demo_show_hide"
        style="@style/setting"
        android:checked="true"
        android:text="Show bottom navigation" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/fragment_demo_selected_background"
        style="@style/setting"
        android:checked="false"
        android:text="Show selected background" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/fragment_demo_translucent_navigation"
        style="@style/setting"
        android:checked="false"
        android:text="Enable translucent navigation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:text="Title State:" />

    <Spinner
        android:id="@+id/fragment_demo_title_state"
        style="@style/setting"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tab2DifferentColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_different_colors"
            android:onClick="tab2DifferentColors"/>

        <Button
            android:id="@+id/tab1CustomColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1_custom_colors"
            android:onClick="tab1CustomColors"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tab3SelectedIconColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3_selected_icon_color"
            android:onClick="tab3SelectedIconColor"/>
        <Button
            android:id="@+id/fontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fontSize"
            android:onClick="setTab3FontSize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tab1Pimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1_pimple"
            android:onClick="tab1Pimple"/>
        <Button
            android:id="@+id/tab2Pimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_pimple"
            android:onClick="tab2Pimple"/>

        <Button
            android:id="@+id/tab2Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_badge"
            android:onClick="tab2Badge"/>
    </LinearLayout>
</LinearLayout>
